Changed Gantt sched added GANTT folder

--- a/GANTT/ProjectPlan-chart.html
+++ b/GANTT/ProjectPlan-chart.html
@@ -91,45 +91,17 @@
 </table>
 </center>
 <br>
-<table width="550" border="0">
-<tr>
-<td valign="top" bgcolor="#dddddd">
-<h5>Project</h5>
-</td><td valign="top">
-<h6>Untitled Gantt Project</h6>
-</td>
-</tr>
-<tr>
-<td valign="top" bgcolor="#dddddd">
-<h5>Organization</h5>
-</td><td valign="top">
-<h6></h6>
-</td>
-</tr>
-<tr>
-<td valign="top" bgcolor="#dddddd">
-<h5>Web Link</h5>
-</td><td valign="top"><a href="http://">
-<h6>http://</h6>
-</a></td>
-</tr>
-<tr>
-<td valign="top" bgcolor="#dddddd">
-<h5>Description</h5>
-</td><td valign="top">
-<div style="padding-left:10pt">
-<pre style="font-family: sans-serif"></pre>
-</div>
-</td>
-</tr>
-</table>
+<br>
+<img src="ProjectPlan.png"><br>
+<br>
+<img src=""><br>
 </center>
 <br>
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 <tr>
 <td bgcolor="#6d9ec6" width="50%"><font color="#FFFFFF"><b>Ganttproject (2.8.10 Pilsen (build 2364))</b></font></td><td bgcolor="#6d9ec6" width="50%" align="right"><b><a href="http://ganttproject.biz">ganttproject.biz</a></b>
 <br>
-<b>10/7/19 - 8:27:34 AM</b></td>
+<b>10/9/19 - 9:26:18 AM</b></td>
 </tr>
 </table>
 </body>
