--- a/GANTT/ProjectPlan-tasks.html
+++ b/GANTT/ProjectPlan-tasks.html
@@ -130,7 +130,7 @@
 </td>
 </tr>
 <tr>
-<td valign="top" style="padding-left: 1em;"><b>ROS reading of all the sensors</b></td><td valign="top">9/30/19</td><td valign="top">10/18/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Anton Tiberg, Carl Frisenstam</td><td valign="top">
+<td valign="top" style="padding-left: 1em;"><b>ROS reading of all the sensors</b></td><td valign="top">9/30/19</td><td valign="top">10/18/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Anton Tiberg, Carl Frisenstam, Ridge Pettersson</td><td valign="top">
 <pre width="40"></pre>
 </td>
 </tr>
@@ -145,17 +145,17 @@
 </td>
 </tr>
 <tr>
-<td valign="top" style="padding-left: 1em;"><b>Sending data to central</b></td><td valign="top">10/21/19</td><td valign="top">11/4/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Anton Tiberg, Carl Frisenstam, Ridge Pettersson</td><td valign="top">
+<td valign="top" style="padding-left: 1em;"><b>Sending data to central</b></td><td valign="top">10/9/19</td><td valign="top">10/18/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Carl Frisenstam</td><td valign="top">
 <pre width="40"></pre>
 </td>
 </tr>
 <tr>
-<td valign="top" style="padding-left: 1em;"><b>Send data to units</b></td><td valign="top">11/5/19</td><td valign="top">12/9/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Anton Tiberg, Carl Frisenstam, Ridge Pettersson</td><td valign="top">
+<td valign="top" style="padding-left: 1em;"><b>Send data to units</b></td><td valign="top">10/21/19</td><td valign="top">11/8/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Carl Frisenstam</td><td valign="top">
 <pre width="40"></pre>
 </td>
 </tr>
 <tr>
-<td valign="top" style="padding-left: 1em;"><b>Setting of the 2D lidar based mapping for real time execution</b></td><td valign="top">11/5/19</td><td valign="top">1/3/20</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Anton Tiberg, Carl Frisenstam, Ridge Pettersson</td><td valign="top">
+<td valign="top" style="padding-left: 1em;"><b>Setting of the 2D lidar based mapping for real time execution</b></td><td valign="top">10/21/19</td><td valign="top">12/19/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Anton Tiberg, Carl Frisenstam, Ridge Pettersson</td><td valign="top">
 <pre width="40"></pre>
 </td>
 </tr>
@@ -232,12 +232,12 @@
 </td>
 </tr>
 <tr>
-<td valign="top" style="padding-left: 1em;"><b>Path planing</b></td><td valign="top">9/18/19</td><td valign="top">10/31/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top"></td><td valign="top">
+<td valign="top" style="padding-left: 1em;"><b>Path planning</b></td><td valign="top">9/18/19</td><td valign="top">10/31/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top"></td><td valign="top">
 <pre width="40"></pre>
 </td>
 </tr>
 <tr>
-<td valign="top" style="padding-left: 2em;"><b>research obstacle avoidance solutions</b></td><td valign="top">9/18/19</td><td valign="top">10/7/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Scott Fredriksson, Zacharias Tyllstr&ouml;m</td><td valign="top">
+<td valign="top" style="padding-left: 2em;"><b>Research obstacle avoidance solutions</b></td><td valign="top">9/18/19</td><td valign="top">10/7/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Scott Fredriksson, Zacharias Tyllstr&ouml;m</td><td valign="top">
 <pre width="40"></pre>
 </td>
 </tr>
@@ -247,7 +247,7 @@
 </td>
 </tr>
 <tr>
-<td valign="top" style="padding-left: 2em;"><b>Planing</b></td><td valign="top">10/8/19</td><td valign="top">10/11/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Scott Fredriksson, Zacharias Tyllstr&ouml;m</td><td valign="top">
+<td valign="top" style="padding-left: 2em;"><b>Planning</b></td><td valign="top">10/8/19</td><td valign="top">10/11/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Scott Fredriksson, Zacharias Tyllstr&ouml;m</td><td valign="top">
 <pre width="40"></pre>
 </td>
 </tr>
@@ -257,7 +257,7 @@
 </td>
 </tr>
 <tr>
-<td valign="top" style="padding-left: 1em;"><b>Creat simulator</b></td><td valign="top">9/9/19</td><td valign="top">10/7/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Scott Fredriksson, Zacharias Tyllstr&ouml;m</td><td valign="top">
+<td valign="top" style="padding-left: 1em;"><b>Create simulator</b></td><td valign="top">9/9/19</td><td valign="top">10/7/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Scott Fredriksson, Zacharias Tyllstr&ouml;m</td><td valign="top">
 <pre width="40"></pre>
 </td>
 </tr>
@@ -272,7 +272,7 @@
 </td>
 </tr>
 <tr>
-<td valign="top" style="padding-left: 2em;"><b>research exploration solutions</b></td><td valign="top">11/21/19</td><td valign="top">12/10/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Scott Fredriksson, Zacharias Tyllstr&ouml;m</td><td valign="top">
+<td valign="top" style="padding-left: 2em;"><b>Research exploration solutions</b></td><td valign="top">11/21/19</td><td valign="top">12/10/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Scott Fredriksson, Zacharias Tyllstr&ouml;m</td><td valign="top">
 <pre width="40"></pre>
 </td>
 </tr>
@@ -282,7 +282,7 @@
 </td>
 </tr>
 <tr>
-<td valign="top" style="padding-left: 2em;"><b>Planing</b></td><td valign="top">12/11/19</td><td valign="top">12/16/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Scott Fredriksson, Zacharias Tyllstr&ouml;m</td><td valign="top">
+<td valign="top" style="padding-left: 2em;"><b>Planning</b></td><td valign="top">12/11/19</td><td valign="top">12/16/19</td><td valign="top" align="center">&nbsp;</td><td valign="top">0</td><td valign="top">Scott Fredriksson, Zacharias Tyllstr&ouml;m</td><td valign="top">
 <pre width="40"></pre>
 </td>
 </tr>
@@ -308,7 +308,7 @@
 <tr>
 <td bgcolor="#6d9ec6" width="50%"><font color="#FFFFFF"><b>Ganttproject (2.8.10 Pilsen (build 2364))</b></font></td><td bgcolor="#6d9ec6" width="50%" align="right"><b><a href="http://ganttproject.biz">ganttproject.biz</a></b>
 <br>
-<b>10/7/19 - 8:27:34 AM</b></td>
+<b>10/9/19 - 9:26:18 AM</b></td>
 </tr>
 </table>
 </body>
