--- a/GANTT/ProjectPlan.html
+++ b/GANTT/ProjectPlan.html
@@ -91,50 +91,45 @@
 </table>
 </center>
 <br>
-<table width="600" border="0">
+<table width="550" border="0">
 <tr>
-<td bgcolor="#dddddd">
-<h5>Name</h5>
-</td><td bgcolor="#dddddd">
-<h5>Default role</h5>
-</td><td bgcolor="#dddddd">
-<h5>Mail</h5>
-</td><td bgcolor="#dddddd">
-<h5>Phone</h5>
+<td valign="top" bgcolor="#dddddd">
+<h5>Project</h5>
+</td><td valign="top">
+<h6>Untitled Gantt Project</h6>
 </td>
 </tr>
 <tr>
-<td valign="top"><b>Anton Tiberg</b></td><td valign="top">undefined</td><td valign="top"><a href="mailto:"></a></td><td valign="top"></td>
+<td valign="top" bgcolor="#dddddd">
+<h5>Organization</h5>
+</td><td valign="top">
+<h6></h6>
+</td>
 </tr>
 <tr>
-<td valign="top"><b>Carl Frisenstam</b></td><td valign="top">undefined</td><td valign="top"><a href="mailto:"></a></td><td valign="top"></td>
+<td valign="top" bgcolor="#dddddd">
+<h5>Web Link</h5>
+</td><td valign="top"><a href="http://">
+<h6>http://</h6>
+</a></td>
 </tr>
 <tr>
-<td valign="top"><b>Scott Fredriksson</b></td><td valign="top">undefined</td><td valign="top"><a href="mailto:"></a></td><td valign="top"></td>
-</tr>
-<tr>
-<td valign="top"><b>Oscar Rimsby</b></td><td valign="top">undefined</td><td valign="top"><a href="mailto:"></a></td><td valign="top"></td>
-</tr>
-<tr>
-<td valign="top"><b>William Lindell</b></td><td valign="top">undefined</td><td valign="top"><a href="mailto:"></a></td><td valign="top"></td>
-</tr>
-<tr>
-<td valign="top"><b>Zacharias Tyllstr&ouml;m</b></td><td valign="top">undefined</td><td valign="top"><a href="mailto:"></a></td><td valign="top"></td>
-</tr>
-<tr>
-<td valign="top"><b>Ridge Pettersson</b></td><td valign="top">undefined</td><td valign="top"><a href="mailto:"></a></td><td valign="top"></td>
+<td valign="top" bgcolor="#dddddd">
+<h5>Description</h5>
+</td><td valign="top">
+<div style="padding-left:10pt">
+<pre style="font-family: sans-serif"></pre>
+</div>
+</td>
 </tr>
 </table>
-<br>
-<br>
-<img src="ProjectPlan.res.png"><br>
 </center>
 <br>
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 <tr>
 <td bgcolor="#6d9ec6" width="50%"><font color="#FFFFFF"><b>Ganttproject (2.8.10 Pilsen (build 2364))</b></font></td><td bgcolor="#6d9ec6" width="50%" align="right"><b><a href="http://ganttproject.biz">ganttproject.biz</a></b>
 <br>
-<b>10/7/19 - 8:27:34 AM</b></td>
+<b>10/9/19 - 9:26:18 AM</b></td>
 </tr>
 </table>
 </body>
